--- a/MiniTwit/Pages/_ViewImports.cshtml
+++ b/MiniTwit/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using MiniTwit
-@using MiniTwit.Models
+@using MiniTwitInfra.Models
 @namespace MiniTwit.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
