--- a/MiniTwit/Pages/Shared/_Layout.cshtml
+++ b/MiniTwit/Pages/Shared/_Layout.cshtml
@@ -29,11 +29,11 @@
     <div class=page>
         <h1>MiniTwit</h1>
         <div class=navigation>
-        @if(httpContextAccessor.HttpContext.Session.GetString(Security.Authentication.AuthUsername) != null) 
+        @if(httpContextAccessor.HttpContext.Session.GetString(MiniTwitInfra.Authentication.AuthUsername) != null) 
         {
             <a asp-page="/Index">my timeline</a> 
             <a asp-page="/Public">public timeline</a> 
-            <a asp-page="/Logout">sign out @httpContextAccessor.HttpContext.Session.GetString(Security.Authentication.AuthUsername)</a>
+            <a asp-page="/Logout">sign out @httpContextAccessor.HttpContext.Session.GetString(MiniTwitInfra.Authentication.AuthUsername)</a>
         }
         else 
         {
