Change footer message
Co-authored-by: Nicklas Jeppesen <nicklasxxx@users.noreply.github.com>
Co-authored-by: GertLu <GertLu@users.noreply.github.com>
Co-authored-by: David Falces <DavidFalces@users.noreply.github.com>

--- a/MiniTwit/Areas/FrontEnd/Views/Shared/_Layout.cshtml
+++ b/MiniTwit/Areas/FrontEnd/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
             @RenderBody()
         </div>
         <div class=footer>
-          MiniTwit &mdash; A Razor Pages Application
+          MiniTwit &mdash; A ASP.NET MVC Application
         </div>
     </div>
 
