--- a/MiniTwit/Areas/FrontEnd/Views/Register/Index.cshtml
+++ b/MiniTwit/Areas/FrontEnd/Views/Register/Index.cshtml
@@ -15,16 +15,16 @@
     </div>
 }
 
-<form method="post">
+<form method="post" action="/ui-register">
     <dl>
         <dt>Username:</dt>
         <dd><input type="text" asp-for="Username" class="form-control"></dd>
         <dt>E-Mail:</dt>
         <dd><input type="text" asp-for="Email" class="form-control"></dd>
         <dt>Password:</dt>
-        <dd><input type="password" asp-for="Password" class="form-control"></dd>
+        <dd><input type="password" asp-for="Pwd" class="form-control"></dd>
         <dt>Password <small>(repeat)</small>:</dt>
-        <dd><input type="password" asp-for="Password2" class="form-control"></dd>
+        <dd><input type="password" asp-for="Pwd2" class="form-control"></dd>
     </dl>
     <div class="actions">
         <button type="submit" class="btn btn-primary">Sign Up</button>
